<resources>
    <string name="app_name">ColonyAdmin</string>

    <string name="action_settings">Configuracion</string>
    <string name="email">Correo</string>
    <string name="passowrd">Contraseña</string>
    <string name="login">COLONY ADMIN</string>
    <string name="show_pwd">Ver Contraseña</string>
    <string name="hide_pwd">Esconder Contraseña</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Registrate aqui.</string>
    <string name="fullName">Nombre(s)</string>
    <string name="lastname">Apellidos</string>
    <string name="mobileNumber">Numero de telefono</string>
    <string name="location">Dirección</string>
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="Plates">Placas</string>

    <string name="signUp">Registrarse</string>
    <string name="already_user">¿Ya tienes cuenta? Ingresa aquí.</string>
    <string name="resend_code_email">Reenviar codigo</string>
    <string name="registered_emailid">Por favor ingresa tu correo</string>
    <string name="registered_password_change">Por favor ingresa tu nueva contraseña</string>
    <string name="registered_codeid">Ingresa el codigo</string>
    <string name="submit">Confirmar</string>
    <string name="back">Regresar</string>

    <string name="changePasswordButton">Cambiar contraseña</string>
    <string name="return_menu">Regresar a la página principal</string>

    <string name="guest_list">Lista de invitados</string>
    <string name="profile">Perfil</string>
    <string name="map_title">Mapa</string>

    <string name="sos_title">¿Deseas pedir ayuda?</string>
    <string name="sos_btnhelp">Pedir ayuda</string>

    <string name="invitation_title_invitation">¿Deseas enviarle una invitación?</string>
    <string name="invitation_btnPedirAyuda">Mandar invitación</string>

    <string name="guestdetaill_title">Invitado</string>
    <string name="guestdetaill_sendinvitation">Enviar invitación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyDTeNiTc0Qu9CsQZBTapYCLVQqqPbO2pHI</string>

</resources>
