<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical"
    tools:context=".ForgotPassword.ChangePasswordFragment" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_password_change"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="17sp" />
    <EditText
        android:id="@+id/changepassword_edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@color/colorAccentLightGray"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccentRed" />

    <EditText
        android:id="@+id/changepassword_edtConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@color/colorAccentLightGray"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccentRed" />


    <Button
        android:id="@+id/changepassword_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:padding="3dp"
        android:text="@string/changePasswordButton"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changepassword_txtRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/return_menu"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="15sp" />

</LinearLayout>